<resources>
    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
    <string name="quick_settings_tiles_default">wifi,bt,inversion,cell,airplane,rotation,flashlight,location,cast,hotspot</string>
    <string name="quick_settings_tiles">default</string>
    <string name="velocity_tracker_impl">platform</string>
    <string name="doze_pulse_schedule">1s,10s,30s,60s</string>
    <string name="system_ui_date_pattern">@android:string/system_ui_date_pattern</string>
    <string name="vivo_status_bar_date_formatter_cn">%1$s %2$s</string>
    <string name="vivo_status_bar_date_formatter_us">"%1$s
%2$s"</string>
    <string name="lland">L Land</string>
    <string name="vivo_keyguard_full_wday_month_no_year">d MMM</string>
    <string name="vivo_keyguard_full_wday_no_year">E</string>
    <string name="vivo_keyguard_full_wday_month_week_no_year">MMM d E</string>
    <string name="vivo_keyguard_nature_wday_month_week_no_year">E d MMM</string>
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">Your recent screens appear here</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Battery is low</string>
    <string name="battery_low_percent_format">Remaining: %s</string>
    <string name="battery_low_percent_format_saver_started">Remaining: %s. Power saving assistant has been turned on.</string>
    <string name="invalid_charger">"USB charging not supported.
Use only the supplied charger."</string>
    <string name="invalid_charger_title">USB charging not supported.</string>
    <string name="invalid_charger_text">Use only the supplied charger.</string>
    <string name="battery_low_why">Settings</string>
    <string name="battery_saver_confirmation_title">Turn on battery saver?</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on battery saver</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">WLAN</string>
    <string name="status_bar_settings_airplane">Airplane mode</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">Mute</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_settings_battery_meter_format">%d%%</string>
    <string name="status_bar_network_name_separator">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app %1$s to access the USB device?</string>
    <string name="usb_accessory_permission_prompt">Allow the app %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at %1$s</string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Use by default for this USB device</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">"The computer's RSA key fingerprint is:
%1$s"</string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="screenshot_saving_ticker">Saving screenshot…</string>
    <string name="screenshot_saving_title">Saving screenshot…</string>
    <string name="screenshot_saving_text">Screenshot is being saved.</string>
    <string name="screenshot_saved_title">Screenshot captured.</string>
    <string name="screenshot_saved_text">Touch to view your screenshot.</string>
    <string name="screenshot_failed_title">"Couldn't capture screenshot."</string>
    <string name="screenshot_failed_text">"Can't take screenshot due to limited storage space, or it isn't allowed by the app or your organization."</string>
    <string name="usb_preference_title">USB file transfer options</string>
    <string name="use_mtp_button_title">Mount as a media player (MTP)</string>
    <string name="use_ptp_button_title">Mount as a camera (PTP)</string>
    <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_recent">Overview</string>
    <string name="accessibility_search_light">Search</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_phone_button">Phone</string>
    <string name="accessibility_unlock_button">Unlock</string>
    <string name="unlock_label">Unlock</string>
    <string name="phone_label">open phone</string>
    <string name="camera_label">open camera</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_wifi_off">Wi-Fi off.</string>
    <string name="accessibility_no_wifi">Wi-Fi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wi-Fi one bar.</string>
    <string name="accessibility_wifi_two_bars">Wi-Fi two bars.</string>
    <string name="accessibility_wifi_three_bars">Wi-Fi three bars.</string>
    <string name="accessibility_wifi_signal_full">Wi-Fi signal full.</string>
    <string name="accessibility_wifi_name">Connected to %s.</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_no_wimax">No WiMAX.</string>
    <string name="accessibility_wimax_one_bar">WiMAX one bar.</string>
    <string name="accessibility_wimax_two_bars">WiMAX two bars.</string>
    <string name="accessibility_wimax_three_bars">WiMAX three bars.</string>
    <string name="accessibility_wimax_signal_full">WiMAX signal full.</string>
    <string name="accessibility_no_signal">No signal.</string>
    <string name="accessibility_not_connected">Not connected.</string>
    <string name="accessibility_zero_bars">Zero bars.</string>
    <string name="accessibility_one_bar">One bar.</string>
    <string name="accessibility_two_bars">Two bars.</string>
    <string name="accessibility_three_bars">Three bars.</string>
    <string name="accessibility_signal_full">Signal full.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="vivo_statusbar_type">Status Bar</string>
    <string name="back">Cancel</string>
    <string name="name_hint">Nickname</string>
    <string name="color_name">Color</string>
    <string name="shortcut">Quick-launch applications</string>
    <string name="vivo_notification_type">Notifications</string>
    <string name="vivo_network_speed_switch">Display network speed</string>
    <string name="vivo_power_percent_switch">Battery percentage</string>
    <string name="vivo_schedule_switch">Display events</string>
    <string name="vivo_netweork_flow_switch">Display data usage</string>
    <string name="vivo_notification_to_show_item">Apps that allow notification</string>
    <string name="vivo_notification_not_to_show_item">Apps that do not allow notification</string>
    <string name="vivo_show_notification">Allow notification</string>
    <string name="vivo_show_keyguard_notification">Show on lock screen</string>
    <string name="vivo_show_keyguard_notification_details">Show notification content on lock screen</string>
    <string name="vivo_show_desktop_app_icon_badge">Badge desktop app icon</string>
    <string name="vivo_show_notification_top_preview">Top preview</string>
    <string name="vivo_show_priority_notification">Priority</string>
    <string name="vivo_show_priority_notification_illustration">Show in the front of the notification list</string>
    <string name="vivo_notification_icon_redraw_switch">Icon beautification</string>
    <string name="show_imanager_lock_tip">If you enable the app lock in i Manager, the detailed lock screen notifications will no longer be available.</string>
    <string name="show_imanager_locked_tip">The detailed lock screen notifications are not available, for you have enabled the lock on the app in i Manager.</string>
    <string name="vivo_switcher_order_show">Display switch</string>
    <string name="vivo_switcher_order_hide">Do not display switch</string>
    <string name="vivo_switcher_order_hide_tip">"Hide: Drag the switch to \"Do not display switch\" area 
Sort: Drag the switch to the place as you wish in \"Display switch\" area"</string>
    <string name="keyguard_accessibility_pin_unlock">Pin unlock.</string>
    <string name="keyguard_pin_description_key1">One</string>
    <string name="keyguard_pin_description_key2">Two</string>
    <string name="keyguard_pin_description_key3">Three</string>
    <string name="keyguard_pin_description_key4">Four</string>
    <string name="keyguard_pin_description_key5">Five</string>
    <string name="keyguard_pin_description_key6">Six</string>
    <string name="keyguard_pin_description_key7">Seven</string>
    <string name="keyguard_pin_description_key8">Eight</string>
    <string name="keyguard_pin_description_key9">Nine</string>
    <string name="keyguard_pin_description_key0">Zero</string>
    <string name="vivo_emergency">Emergency</string>
</resources>