<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.VivoPinView android:orientation="vertical" android:id="@id/vivo_pin_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/keyguard_accessibility_pin_unlock"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:androidprv="http://schemas.android.com/apk/res-auto">
    <com.android.keyguard.vivo.widget.ImageDigitalClock android:layout_gravity="center" android:id="@id/time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vivo_clock_margintop" android:layout_alignParentTop="true" android:layout_centerInParent="true" />
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vivo_date_margintop" android:layout_alignParentTop="true" android:layout_centerInParent="true">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/vivo_date_size" android:textColor="#ffffffff" android:ellipsize="marquee" android:id="@id/date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/vivo_date_size" android:textColor="#ffffffff" android:ellipsize="marquee" android:id="@id/Week" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:drawablePadding="4.0dip" />
    </LinearLayout>
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vivo_pin_message_title" layout="@layout/vivo_message_title" />
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vivo_pin_message_top" layout="@layout/keyguard_message_area" />
    <RelativeLayout android:id="@id/vivo_area_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vivo_pin_group_top">
        <RelativeLayout android:id="@id/simple_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/password1bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vivo_pin_password1_left" android:src="@drawable/vivo_pin_bg" android:layout_alignParentLeft="true" />
            <ImageView android:id="@id/password1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vivo_pin_password1_left" android:src="@drawable/vivo_pin_bg" android:layout_alignParentLeft="true" />
            <ImageView android:id="@id/password2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vivo_pin_password2_left" android:src="@drawable/vivo_pin_bg" android:layout_toRightOf="@id/password1" android:layout_alignBottom="@id/password1" />
            <ImageView android:id="@id/password2bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vivo_pin_password2_left" android:src="@drawable/vivo_pin_bg" android:layout_toRightOf="@id/password1" android:layout_alignBottom="@id/password1" />
            <ImageView android:id="@id/password3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vivo_pin_password2_left" android:src="@drawable/vivo_pin_bg" android:layout_toRightOf="@id/password2" android:layout_alignBottom="@id/password1" />
            <ImageView android:id="@id/password3bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vivo_pin_password2_left" android:src="@drawable/vivo_pin_bg" android:layout_toRightOf="@id/password2" android:layout_alignBottom="@id/password1" />
            <ImageView android:id="@id/password4bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vivo_pin_password2_left" android:src="@drawable/vivo_pin_bg" android:layout_toRightOf="@id/password3" android:layout_alignBottom="@id/password1" />
            <ImageView android:id="@id/password4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/vivo_pin_password2_left" android:src="@drawable/vivo_pin_bg" android:layout_toRightOf="@id/password3" android:layout_alignBottom="@id/password1" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/vivo_pin_keyboard_top" android:layout_weight="1.0">
        <Button android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/vivo_pin_resume_left" android:background="@drawable/vivo_onehand_resume_left" android:visibility="gone" android:layout_width="@dimen/resume_width" android:layout_height="@dimen/resume_height" android:layout_marginTop="@dimen/vivo_pin_resume_top" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <Button android:id="@id/vivo_pin_direction_left" android:background="@drawable/vivo_onehand_arrow_left" android:visibility="gone" android:layout_width="@dimen/direction_width" android:layout_height="@dimen/direction_height" android:layout_marginTop="@dimen/vivo_pin_direction_top" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <LinearLayout android:orientation="vertical" android:id="@id/keyguard_bouncer_frame" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="@dimen/pin_keyboard_width" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pin_keyboard_left" android:layout_weight="1.0">
                <ImageButton android:id="@id/VivoPinkey1" android:background="@drawable/vivo_pin_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key1" />
                <ImageButton android:id="@id/VivoPinkey2" android:background="@drawable/vivo_pin_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key2" />
                <ImageButton android:id="@id/VivoPinkey3" android:background="@drawable/vivo_pin_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key3" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="@dimen/pin_keyboard_width" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pin_keyboard_left" android:layout_weight="1.0">
                <ImageButton android:id="@id/VivoPinkey4" android:background="@drawable/vivo_pin_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key4" />
                <ImageButton android:id="@id/VivoPinkey5" android:background="@drawable/vivo_pin_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key5" />
                <ImageButton android:id="@id/VivoPinkey6" android:background="@drawable/vivo_pin_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key6" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="@dimen/pin_keyboard_width" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pin_keyboard_left" android:layout_weight="1.0">
                <ImageButton android:id="@id/VivoPinkey7" android:background="@drawable/vivo_pin_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key7" />
                <ImageButton android:id="@id/VivoPinkey8" android:background="@drawable/vivo_pin_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key8" />
                <ImageButton android:id="@id/VivoPinkey9" android:background="@drawable/vivo_pin_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key9" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="@dimen/pin_keyboard_width" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pin_keyboard_left" android:layout_weight="1.0">
                <ImageButton android:id="@id/VivoPinkey0left" android:background="@drawable/vivo_pin_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <ImageButton android:id="@id/VivoPinkey0" android:background="@drawable/vivo_pin_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" android:contentDescription="@string/keyguard_pin_description_key0" />
                <ImageButton android:id="@id/VivoPinkey0right" android:background="@drawable/vivo_pin_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="@dimen/pin_keyboard_width" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/pin_keyboard_left" android:layout_weight="1.0">
                <com.android.keyguard.EmergencyButton android:textSize="13.0dip" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/VivoPinEmergency" android:background="@drawable/vivo_emergency" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vivo_emergency" android:layout_weight="1.0" />
                <Button android:id="@id/Vivonull" android:background="@drawable/vivo_emergency" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <Button android:textSize="13.0dip" android:textColor="#ffffffff" android:id="@id/VivoPinkeydel" android:background="@drawable/vivo_emergency" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <Button android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/vivo_pin_resume_right" android:background="@drawable/vivo_onehand_resume_right" android:visibility="gone" android:layout_width="@dimen/resume_width" android:layout_height="@dimen/resume_height" android:layout_marginTop="@dimen/vivo_pin_resume_top" android:scaleType="centerInside" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <Button android:id="@id/bbk_pin_pad_direction_right" android:background="@drawable/vivo_onehand_arrow_right" android:visibility="gone" android:layout_width="@dimen/direction_width" android:layout_height="@dimen/direction_height" android:layout_marginTop="@dimen/vivo_pin_direction_top" android:scaleType="centerInside" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
</com.android.keyguard.VivoPinView>