<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/head_icon_name_main" android:background="?vivo:generalBackground" android:paddingTop="7.0dip" android:paddingBottom="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
                <FrameLayout android:id="@id/head_icon_main" android:layout_width="@dimen/iconset_icon_width" android:layout_height="@dimen/iconset_icon_width">
                    <com.android.systemui.vivo.common.keyguard.nature.widget.GifView android:id="@id/head_icon" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="1.0dip" />
                    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/vivo_keyguard_nature_stroke_circle_thin" />
                </FrameLayout>
                <EditText android:textSize="16.0sp" android:id="@id/name" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="@dimen/iconset_icon_width" android:hint="@string/name_hint" android:singleLine="true" android:maxLength="12" android:layout_centerVertical="true" />
            </RelativeLayout>
            <include android:id="@id/stub_signature" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_below="@id/head_icon_name_main" layout="@layout/vivo_keyguard_nature_signature" />
            <TextView android:id="@id/shortcut_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/shortcut" android:layout_below="@id/stub_signature" />
            <include android:id="@id/shortcut_left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_below="@id/shortcut_title" layout="@layout/vivo_keyguard_nature_settings_item" />
            <include android:id="@id/shortcut_right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/shortcut_left" layout="@layout/vivo_keyguard_nature_settings_item" />
            <View android:id="@id/divider" android:background="?android:dividerHorizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/shortcut_left" />
            <TextView android:id="@id/color_id" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/color_name" android:layout_below="@id/stub_signature" />
            <include android:id="@id/color_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/color_id" layout="@layout/vivo_keyguard_nature_color_selector" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>